--- a/CoreJava/.gitignore
+++ b/CoreJava/.gitignore
@@ -2,3 +2,11 @@
 /HelloWorldWithArgs.class
 /Calculator.class
 /Example.class
+/Banking.class
+/sample.class
+/Product.class
+/ArrayDemo.class
+/Book.class
+/ScienceBook.class
+/BookTest.class
+/StoryBook.class
