--- a/CoreJava/.gitignore
+++ b/CoreJava/.gitignore
@@ -21,3 +21,13 @@
 /Greeting.class
 /RunnableDemo.class
 /VolatileTest.class
+/timeLog.class
+/LogProcessor.class
+/TimeLog.class
+/.apt_generated/
+/Emp.class
+/Person.class
+/Person$Sex.class
+/CheckPerson.class
+/CheckPersonEligibleForSelectiveService.class
+/Person$1.class
